hphp/hack/test/package/disable_package_checks/require_package_interface_method.php.exp
error: Typing[4231] The __RequirePackage attribute cannot be used on a method declaration in an interface. [1]

require_package_interface_method.php--file.php:5:5
    3 | interface I {
    4 |   // this is an error if allow_require_package_on_interface_methods is false
[1] 5 |   <<__RequirePackage('pkg')>>
    6 |   public function foo(): void;
    7 | }

1 error found
